<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="dark_mode_category"
        android:title="@string/settings_category_timer">

        <me.ranko.autodark.ui.Preference.DarkDisplayPreference
            android:defaultValue="19:20"
            android:key="dark_mode_time_start"
            android:title="@string/pref_time_start" />

        <me.ranko.autodark.ui.Preference.DarkDisplayPreference
            android:defaultValue="06:15"
            android:key="dark_mode_time_end"
            android:title="@string/pref_time_end" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_mode_auto"
            android:persistent="false"
            android:summary="@string/pref_time_auto_summary"
            android:title="@string/pref_time_auto" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_dev">
        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_mode_force"
            android:summary="@string/pref_force_dark_summary"
            android:title="@string/pref_force_dark" />
    </PreferenceCategory>

    <Preference android:title="@string/app_about">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/0ranko0P/AutoDark" />
    </Preference>
</PreferenceScreen>