<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/into_card_margin"
    app:cardCornerRadius="@dimen/into_card_radius"
    app:elevation="@dimen/into_card_elevation"
    tools:showIn="@layout/fragment_permission">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/into_title_padding_start"
        android:paddingTop="@dimen/into_title_padding_top"
        android:paddingEnd="@dimen/into_title_padding_end"
        android:paddingBottom="@dimen/into_title_padding_bottom">

        <TextView android:id="@+id/titleRoot"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/into_icon_height"
            android:drawableStart="@drawable/ic_root"
            android:text="@string/root_title" />

        <TextView android:id="@+id/infoRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/into_info_margin_top"
            android:layout_marginBottom="@dimen/into_info_margin_top"
            android:text="@string/root_description" />

        <TextView android:id="@+id/btnRoot"
            style="@style/PermissionButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/into_button_height"
            android:text="@string/root_grant" />

        <ProgressBar android:id="@+id/progressRoot"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/into_button_height"
            android:layout_height="@dimen/into_button_height"
            android:progressTint="?colorAccent"
            android:visibility="gone"
            tools:visibility="visible"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>