<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/list_app_margin_horizontal"
    android:paddingTop="@dimen/list_app_margin_vertical"
    android:paddingEnd="@dimen/list_app_margin_horizontal"
    android:paddingBottom="@dimen/list_app_margin_vertical">

    <include android:id="@+id/appListContainer"
        layout="@layout/item_manager_base_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/version" />

    <TextView android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/switchWidget"
        android:padding="@dimen/list_app_margin_vertical"
        tools:text="11" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchWidget"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/appListContainer"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:clickable="false"
        android:theme="@style/AppTheme.EdXposedManager" />

    <TextView android:id="@+id/installTime"
        style="@style/ManagerAppListTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchWidget"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/list_manager_app_title_margin_horizontal"
        tools:text="@string/install_time"
        tools:visibility="visible" />

    <TextView android:id="@+id/updateTime"
        style="@style/ManagerAppListTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/installTime"
        android:layout_alignStart="@id/installTime"
        android:layout_alignParentEnd="true"
        tools:text="@string/update_time"
        tools:visibility="visible" />

    <TextView android:id="@+id/recommended"
        style="@style/ManagerAppListTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/list_manager_app_title_margin_horizontal"
        android:text="@string/scope_recommended_edx"
        android:textColor="@color/edXposedAccent"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>